Adicao dos menus de contato e endereço, restando somente parte do QR ĆODE

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,47 @@
     <title>Cartão Suporte</title>
     <link rel="stylesheet" href="/assets/styles.css">
 </head>
+
 <body>
-   
-    <img class="logo" src="./assets/Logologo-agape.svg" alt=""></img>
 
-    <h1 class="titulo">Acesso à informação</h1>
-    
-    <p class="subtitulo">Clique em uma das opções de informações abaixo e será redirecionado automaticamente.</p>
+    <img class="logo" src="./assets/logo-agape.svg" alt=""></img>
 
-    <div class="wpp">
-        <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5527988954119"><img class="icons" src="/assets/whatsapp.svg" alt="whatsapp"> <span class="text-icons">27 98895-4119</span></a>
-    </div>
-    <div class="wpp">
-        <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5527988954119"><img class="icons" src="/assets/whatsapp.svg" alt="whatsapp"> <span class="text-icons">27 98895-4119</span></a>
-    </div>
-    
+    <main>
+        <section>
+            <div class="acesso-informacao">
+                <h1 class="titulo">Acesso à informação</h1>
+
+                <p class="subtitulo">Clique em uma das opções de informações abaixo e será redirecionado
+                    automaticamente.
+                </p>
+
+                <div class="wpp">
+                    <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5527988954119"><img class="icons"
+                            src="/assets/whatsapp.svg" alt="Whatsapp"> <span class="text-icons">(27)
+                            98895-4119</span></a>
+                </div>
+
+                <div class="tel">
+                    <img class="icons" src="/assets/tel.svg" alt="Telefone"> <span class="text-icons">(27)
+                        3345-0818</span>
+                </div>
+
+                <div class="mail">
+                    <a href="contato@suporte.agapeconsultoria.com.br"><img class="icons" src="/assets/mail.svg"
+                            alt="Whatsapp"> <span class="text-icons">contato@suporte.agapeconsultoria.com.br</span></a>
+                </div>
+
+                <div class="address">
+                    <a
+                        href="https://www.google.com.br/maps/place/%C3%81gape+Assessoria+e+Consultoria+Ltda/@-20.3114781,-40.2955603,17z/data=!3m1!4b1!4m5!3m4!1s0xb817c7ac298301:0x53d7148d626f283e!8m2!3d-20.3114781!4d-40.2933716"><img
+                            class="icons" src="/assets/endereco.svg" alt="Endereço"> <span class="text-address-bold">Endereço
+                            para assuntos comerciais:</span><br /><span class="text-address">Ten. Mário Francisco Brito, n° 420 , Sala 1104 Enseada do Suá -<br />Ed. Vértice Empresarial Enseada - Vitória/ES CEP: 29.050-555</span></a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
 </body>
+
 </html>
