html e css 70% finalizados

--- a/Index.html
+++ b/Index.html
@@ -76,9 +76,15 @@
                     <h1 class="titulo2">
                         SUPORTE TÉCNICO
                     </h1>
+                    <p class="subtitulo2">
+                        Para acessar nosso sistema de chamados (GLPI), aponte a câmera<br> do seu smartphone para nosso QR Code, ou clique nele.</p>
+                </div>
+                <div class="qrcode-bloco">
+                    <a href="https://glpi.nopapercloud.com.br/front/ticket.form.php" target="_blank"><img class="qrcode" src="./img/qrcode.svg" alt="QR Code"></a>
+
+                    <a class="url" href="https://glpi.nopapercloud.com.br/front/ticket.form.php"> glpi.nopapercloud.com.br</a>
 
                 </div>
-
 
 
 
