--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
         <section>
             <div class="principal">
-                <div>
+                <div class="logo-agape">
                     <a href="https://agapeconsultoria.com.br" target="_blank"><img src="./img/logo-agape.svg"
                             alt="Ágape Consultoria"></img>
                     </a>
